// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`checkStatusList2021Credential > should return false when the credential is not a valid StatusList2021Credential 1`] = `
{
  "error": "{
  "@context": [
    "https://www.w3.org/2018/credentials/v1",
    "https://w3id.org/vc/status-list/2021/v1"
  ],
  "credentialSchema": {
    "id": "https://example.net",
    "type": "FullJsonSchemaValidator2021"
  },
  "credentialSubject": {
    "encodedList": "H4sIAAAAAAAAA-3BMQEAAADCoPVPbQwfoAAAAAAAAAAAAAAAAAAAAIC3AYbSVKsAQAAA",
    "id": "https://example.net/creds/1#list",
    "statusPurpose": "revocation",
    "type": "StatusList2021"
  },
  "id": "https://example.net/creds/1",
  "issuanceDate": "2021-04-05T14:27:40Z",
  "issued": "2021-04-05T14:27:40Z",
  "issuer": "did:ebsi:example",
  "validFrom": "2021-04-05T14:27:40Z",
  "type" [31m[1][0m: [
    "VerifiableCredential",
    "InvalidStatusList2021Credential"
  ]
}
[31m
[1] "type" does not contain 1 required value(s)[0m",
  "success": false,
}
`;

exports[`statusList2021CredentialSchema > should throw an error when asserting an invalid object 1`] = `
[ValidationError: {
  "credentialSchema": {
    "id": "https://example.net",
    "type": "FullJsonSchemaValidator2021"
  },
  "credentialSubject": {
    "encodedList": "H4sIAAAAAAAAA-3BMQEAAADCoPVPbQwfoAAAAAAAAAAAAAAAAAAAAIC3AYbSVKsAQAAA",
    "id": "https://example.net/creds/1#list",
    "type": "StatusList2021",
    "statusPurpose" [31m[2][0m: "invalid"
  },
  "id": "https://example.net/creds/1",
  "issuanceDate": "2021-04-05T14:27:40Z",
  "issued": "2021-04-05T14:27:40Z",
  "issuer": "did:ebsi:example",
  "validFrom": "2021-04-05T14:27:40Z",
  "type" [31m[4][0m: [
    "VerifiableAttestation", [31m[3][0m
    "VerifiableCredential"
  ],
  "@context" [31m[1][0m: [
    "https://www.w3.org/2018/credentials/v1"
  ]
}
[31m
[1] "@context" does not contain 1 required value(s)
[2] "credentialSubject.statusPurpose" must be one of [revocation, suspension]
[3] "type[0]" must be [VerifiableCredential]
[4] "type" does not contain 1 required value(s)[0m]
`;
